--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,21 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>pinkflozd</title>
+    <title>Luka K. aka pinkflozd</title>
+    <style>
+.anim_gradient {
+  position: absolute;
+  height: 100vh;
+  height: 100dvh;
+  width: 100vw;
+  background: linear-gradient(19deg, #212121 0%, #000000 100%);
+  z-index: -10;
+   }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="anim_gradient"></div>
     <div id="root"></div>
   </body>
 </html>
