--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,18 @@
     <title>Luka K. aka pinkflozd</title>
     <style>
 .anim_gradient {
-  position: absolute;
-  height: 100vh;
-  height: 100dvh;
-  width: 100vw;
+  min-height: 100vh;
+  min-height: 100dvh;
+  width: 100%;
   background: linear-gradient(19deg, #212121 0%, #000000 100%);
   z-index: -10;
    }
     </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="anim_gradient"></div>
+    <div class="anim_gradient">
+      <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+  </div>
   </body>
 </html>
