--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,15 @@
   min-height: 100vh;
   min-height: 100dvh;
   width: 100%;
+  width: 100dvw;
   background: linear-gradient(19deg, #333333 0%, #000000 100%);
+   }
+
+   noscript {
+    color: #fafafa;
+    text-align: center;
+    font-size: 18px;
+    padding: 25px;
    }
     </style>
   </head>
