--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Full Stack Developer"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.jpg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Luka K. aka pinkflozd</title>
     <style>
